# scholar-lens

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01-Data Exploration.ipynb
src/: config.py  data_processing.py  dataset.py  plotting.py  train.py
src/mintransformer/: blocks.py  config.py  functional.py  layers.py  utils.py
src/mintransformer/models/: causal_llm.py  distilbert.py
src/mintransformer/tests/: conftest.py  test_blocks.py  test_model.py  test_nn_utils.py
src/models/: baseline.py  model.py
tests/: conftest.py  test_data_processing.py
